# sentinellite

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/sentinel/: __init__.py  config.py  ingest.py  logging.py  metrics.py  mitre.py  queue.py  types.py
backend/sentinel/actions/: executors.py  generator.py  registry.py
backend/sentinel/agents/: breaker.py  correlator.py  investigation.py  llm.py  triage.py
backend/sentinel/api/: app.py  deps.py  serializers.py
backend/sentinel/api/routes/: actions.py  alerts.py  audit.py  ingest.py  investigations.py
backend/sentinel/audit/: chain.py
backend/sentinel/cli/: main.py
backend/sentinel/datasets/: fetch.py  loader.py  manifest.py
backend/sentinel/db/: base.py  models.py
backend/sentinel/detection/: indicators.py  rules.py  tuner.py
backend/sentinel/enrich/: osv.py
backend/sentinel/graph/: client.py  hydrate.py  queries.py
backend/sentinel/replay/: runner.py  scenario.py
backend/sentinel/report/: pdf.py
backend/sentinel/schemas/: __init__.py  aws_cloudtrail.py  common.py  falco.py  github.py  okta.py
backend/sentinel/worker/: main.py  pipeline.py
backend/tests/: conftest.py  samples.py  test_actions.py  test_audit_chain.py  test_breaker.py  test_correlator.py  test_datasets.py  test_integration.py  test_report.py  test_rules.py  test_schemas.py  test_smoke.py  test_triage.py
dashboard/: Dockerfile  package.json  tailwind.config.ts
datasets/: README.md  manifest.json
(+35 files in other folders)
